# centauro-simulator

./: CMakeLists.txt  README.md  centauro-simulator.kdev4
.kdev4/: centauro-simulator.kdev4
centauro/: CMakeLists.txt  README.md  centauro.urdf  centauro2.urdf  centauro_cvx_hull.urdf  centauro_full.urdf  centauro_full_with_imu.urdf  centauro_gazebo.launch  centauro_tray.urdf  compile_centauro_tray_urdf.bash  compile_centauro_urdf.bash  package.xml  schunk_hands.urdf  stick_hands.urdf  stick_hands3.urdf
centauro/centauro_config/config/: actuators.yaml  actuators_new.yaml  contacts.yaml  contacts_ankle.yaml  joint_limits.yaml  kinematics.yaml
centauro/centauro_config/launch/: centauro_config.launch  planning_context.launch
centauro/centauro_srdf/srdf/: centauro.acm  centauro.acm~  centauro.srdf  centauro.srdf~  centauro_generated.srdf  centauro_generated_lb.srdf  centauro_poses.xacro  centauro_sim2.srdf  simple_model.srdf
centauro/centauro_urdf/: materials.xacro  parameters.xacro
centauro/centauro_urdf/inertia_parameters/: 10_procent_error.xacro  mass_30.xacro  original.xacro  primitives.xacro
centauro/centauro_urdf/kinematic_parameters/: 10_procent_error.xacro  original.xacro  original.xacro.old
centauro/centauro_urdf/launch/: centauro_slider.launch
centauro/centauro_urdf/limits/: control.xacro  default.xacro  (+1 more)
centauro_gazebo/: CMakeLists.txt  README.md  centauro_gazebo.kdev4  package.xml
centauro_gazebo/.kdev4/: centauro_gazebo.kdev4
centauro_gazebo/config/: centauro_control_joint_state_publisher.yaml  centauro_controllers.yaml
centauro_gazebo/launch/: centauro_capsules_slider.launch  centauro_controllers.launch  centauro_debris_removal_task.launch  centauro_floating_arm.launch  centauro_with_controller.launch  centauro_world.launch  centauro_world_new.launch  centauro_world_no_head.launch  centauro_world_slam.launch  empty_world.launch  gap_task.launch  gazebo_centauro.launch  kth_evaluation_gap.launch  kth_evaluation_ramp.launch  pholous.launch  simple_staircase.launch  stepping_field.launch
centauro_gazebo/sensors/: config.xacro  contact_sensor.urdf.xacro  force_torque_plugin.urdf.xacro  imu_plugin.urdf.xacro
centauro_gazebo/sensors/gazebo/bumper/: sensor.xacro
centauro_gazebo/sensors/gazebo/bumper/load/: arms.xacro  legs.xacro
centauro_gazebo/sensors/gazebo/ft_sensor/: sensor.xacro
centauro_gazebo/sensors/gazebo/ft_sensor/load/: arms.xacro  legs.xacro
centauro_gazebo/sensors/gazebo/imu/: sensor.xacro
centauro_gazebo/sensors/gazebo/imu/load/: legs.xacro
centauro_gazebo/sensors/gazebo/kinect/: sensor.xacro
centauro_gazebo/sensors/gazebo/kinect/load/: head.xacro
centauro_gazebo/sensors/gazebo/velodyne/: sensor.xacro
centauro_gazebo/sensors/gazebo/velodyne/load/: head.xacro  legs.xacro
centauro_gazebo/sensors/ros_control/: bumper.xacro  ft_sensor.xacro  imu.xacro  kinect.xacro  plugin.xacro  velodyne.xacro
centauro_gazebo/sensors/ros_control/bumber/: plugin.xacro
centauro_gazebo/sensors/ros_control/ft_sensor/: plugin.xacro
centauro_gazebo/sensors/ros_control/ft_sensor/load/: arms.xacro  legs.xacro
centauro_gazebo/sensors/ros_control/imu/: plugin.xacro
centauro_gazebo/sensors/ros_control/imu/load/: legs.xacro
centauro_gazebo/sensors/ros_control/kinect/: plugin.xacro
centauro_gazebo/sensors/ros_control/velodyne/load/: head.xacro
centauro_gazebo/sensors/xbotcore/: ft_sensor.xacro  plugin.xacro
centauro_gazebo/sensors/xbotcore/ft_sensor/: plugin.xacro
centauro_gazebo/sensors/xbotcore/ft_sensor/load/: arms.xacro  legs.xacro
centauro_gazebo/sensors/xbotcore/imu/: plugin.xacro
centauro_gazebo/sensors/xbotcore/imu/load/: legs.xacro
centauro_gazebo/sensors/xbotcore/kinect/load/: head.xacro
centauro_gazebo/sensors/xbotcore/realsense/: plugin.xacro
centauro_gazebo/sensors/xbotcore/realsense/load/: head.xacro
centauro_gazebo/sensors/xbotcore/velodyne/: plugin.xacro
centauro_gazebo/sensors/xbotcore/velodyne/load/: head.xacro
centauro_gazebo/urdf/: centauro.gazebo  centauro.gazebo~
centauro_gazebo/worlds/: asfalto.world  centauro.world  centauro.world~  centauro_debris.world  centauro_house.world  centauro_i2r.world  centauro_i2r_0.world  centauro_i2r_1.world  centauro_i2r_grasp.world  centauro_stable.world  empty.world  fc.world  fc_backup.world  fc_centauro_fulldemo.world  fc_forwardbar.world  fc_lateralbar.world  gap_task.world  kth_evaluation_gap.world  kth_evaluation_ramp.world  simple_staircase.world  stepping_field.world  test_world.world
centauro_moveit/: CMakeLists.txt  package.xml
centauro_moveit/config/: centauro.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning(not working).yaml  ompl_planning.yaml  torso_arms_kinematics.yaml  upper_body_execution_controllers.yaml  whole_body_fingers_execution_controllers.yaml  whole_body_fingers_kinematics.yaml
centauro_moveit/launch/: centauro_moveit_controller_manager.launch.xml  centauro_moveit_sensor_manager.launch.xml  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  sensor_manager.launch.xml  trajectory_execution.launch.xml
centauro_ros/: CMakeLists.txt  package.xml
centauro_ros/launch/: centauro_tf.launch
centauro_ros/nodes/: joint_state_publisher  load_fixed_transforms
centauro_ros/src/: gazebo_base_transform.cpp
gazebo_plugins/: CMakeLists.txt
gazebo_plugins/config/: Findgazebo_services.cmake
gazebo_plugins/src/: apply_force.cpp  compute_com.cpp  show_com.cpp
gazebo_services/: CMakeLists.txt  README.md  package.xml
gazebo_services/srv/: applyForce.srv  package.xml
(+174 files in other folders)
