<package format="2">
	<name>centauro_gazebo</name>
	<version>0.0.0</version>
	<description>Gazebo configuration and launch files for Centauro</description>

	<maintainer email="malgorzata.kamedula@iit.it">Tobias Klamt</maintainer>
	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>urdf</depend>
</package>
